--- a/css/styles.css
+++ b/css/styles.css
@@ -2800,13 +2800,15 @@ figure {
   background: #fff;
   position: fixed;
   z-index: 9999999999999; }
+  .preload [alt="logo"] {
+    fill: black; }
   .preload svg {
     width: 180px;
     height: 180px;
     margin: auto; }
   .preload circle {
     fill: none;
-    stroke: #2b4b96;
+    stroke: #be1f4e;
     stroke-width: 15px;
     stroke-dasharray: 314.16px;
     stroke-dashoffset: 100px;
@@ -2860,26 +2862,55 @@ figure {
   width: 100%;
   max-width: 350px; }
 
+.header {
+  background: url(../img/flores.png), #be1f4e; }
+  .header h2 {
+    color: white;
+    font-weight: 300;
+    display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    margin: 0;
+    margin-top: .5em;
+    font-size: 1em; }
+    @media screen and (min-width: 480px) {
+      .header h2 {
+        font-size: 1.5em; } }
+  .header p {
+    color: white;
+    margin-bottom: 1em;
+    font-size: .9em; }
+
 #header {
-  height: 100vh;
   background: url(../img/header2.png), url(../img/header.jpg);
   background-repeat: no-repeat;
   background-size: contain ,cover;
-  background-position: bottom center ,center center; }
+  background-position: bottom left ,left center; }
   @media screen and (min-width: 1024px) {
     #header {
-      min-height: 650px; } }
-  #header h1 {
-    color: #fff;
+      height: 512px; } }
+  #header h1, #header figure {
+    color: #be1f4e;
     font-size: 1.5em;
-    text-align: left;
-    font-style: italic; }
+    text-align: right;
+    text-shadow: 2px 2px 3px #fff, -2px -2px 3px #fff; }
     @media screen and (min-width: 480px) {
-      #header h1 {
+      #header h1, #header figure {
         font-size: 3em; } }
+    @media screen and (min-width: 1024px) {
+      #header h1, #header figure {
+        font-weight: 300;
+        text-align: center; } }
 
 #footer {
-  background: #000;
+  background: url(../img/flores.png), #be1f4e;
   min-height: 120px;
   color: rgba(255, 255, 255, 0.6); }
   @media screen and (min-width: 768px) {
@@ -2916,14 +2947,14 @@ figure {
 
 ul {
   list-style: none;
-  padding: 0; }
+  padding: 0;
+  background: #be1f4e;
+  height: 68px; }
   ul li {
-    color: #333;
-    margin-bottom: .3em; }
+    color: #fff;
+    margin-top: 0; }
     #seccion2 ul li {
-      font-style: italic;
-      color: #58595b;
-      font-weight: 700; }
+      color: #fff; }
     ul li span.icon-aceptar {
       display: -webkit-inline-flex;
       display: -ms-inline-flexbox;
@@ -2936,123 +2967,173 @@ ul {
               align-items: center;
       width: 25px;
       height: 25px;
-      background: #ed1c24;
-      color: white;
+      background: #fff;
+      color: #be1f4e;
       border-radius: 50%;
-      margin-right: 1em; }
+      margin-right: .5em; }
       ul li span.icon-aceptar:before {
         top: 0; }
 
 #seccion2 {
-  min-height: 100vh;
   background: #fff;
-  padding: 2em 0; }
-  @media screen and (min-width: 1024px) {
-    #seccion2 {
-      height: 100vh;
-      background: url(../img/foto1.jpg) no-repeat, #fff;
-      background-size: contain;
-      background-position: right bottom; } }
+  padding: 0; }
   #seccion2 h2 {
-    color: #2b4b96; }
+    color: #00a784;
+    text-align: center;
+    margin: 0;
+    font-size: 1.4em; }
+    #seccion2 h2 span {
+      color: #be1f4e; }
+      #seccion2 h2 span.small {
+        font-size: .8em; }
+  @media screen and (min-width: 1024px) {
+    #seccion2 h2 {
+      font-size: 2em;
+      font-weight: 300; } }
+  #seccion2 ul {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 0; }
+    #seccion2 ul li {
+      font-size: 1em;
+      font-weight: 300;
+      text-align: center; }
+      #seccion2 ul li span {
+        width: 35px;
+        height: 35px; }
+    @media screen and (min-width: 768px) {
+      #seccion2 ul li {
+        font-size: 2em; } }
   #seccion2 p {
     color: #000;
     line-height: 1.8;
     text-align: justify; }
     #seccion2 p span {
-      color: #2b4b96;
+      color: #be1f4e;
       font-weight: 700; }
+  #seccion2 h3 {
+    color: #be1f4e;
+    margin: .3em 0; }
+  #seccion2 .tabla {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-flow: row wrap;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
+    width: 100%; }
+    #seccion2 .tabla .lista {
+      margin-bottom: .5em;
+      max-width: 19.1%;
+      background: #dbdcde;
+      width: 100%;
+      height: 60px;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-flex-direction: row;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      font-size: .8em;
+      text-align: center; }
+      #seccion2 .tabla .lista figure {
+        padding: 2em; }
+      #seccion2 .tabla .lista p {
+        color: #000; }
+        #seccion2 .tabla .lista p.icon-aceptar {
+          color: black;
+          font-size: 2em; }
+      #seccion2 .tabla .lista-verde {
+        background: #0c7f3f; }
+        #seccion2 .tabla .lista-verde p.icon-aceptar {
+          color: white;
+          font-size: 2em; }
+      #seccion2 .tabla .lista-vacia {
+        background: none; }
 
-#seccion3 {
-  min-height: 100vh;
-  background: #455871;
-  padding: 2em 0;
-  overflow: hidden; }
+#seccion3 h2 {
+  background: #be1f4e;
+  text-align: center;
+  height: 68px;
+  color: #fff;
+  font-size: 1.5em; }
+  #seccion3 h2.cabello {
+    margin-top: 3.3em;
+    color: white; }
+
+#seccion3 h3 {
+  margin-bottom: 0;
+  color: #00a784;
+  font-weight: 300; }
+
+#seccion3 p {
+  color: #000;
+  line-height: 1.4;
+  text-align: justify; }
+  #seccion3 p.colorRed {
+    color: #be1f4e;
+    font-weight: 700; }
+  #seccion3 p span {
+    color: #ed1c24;
+    font-weight: 700; }
+
+@media screen and (min-width: 1024px) {
+  #seccion3 figure {
+    padding-left: .5em; }
   #seccion3 h2 {
-    color: #1bbcb8;
-    font-size: 1.5em; }
+    font-size: 2em;
+    font-weight: 300;
+    margin-bottom: 0; }
     #seccion3 h2.cabello {
       margin-top: 3.3em;
-      color: white; }
-  #seccion3 p {
-    color: #fff;
-    line-height: 1.8;
-    text-align: justify; }
-    #seccion3 p span {
-      color: #1bbcb8;
-      font-weight: 700; }
-  @media screen and (min-width: 1024px) {
-    #seccion3 {
-      height: 100vh;
-      background: linear-gradient(to right, #455871 60%, #fff 60%); }
-      #seccion3 figure {
-        padding-left: .5em; }
-      #seccion3 h2 {
-        color: #1bbcb8;
-        font-size: 1.5em; }
-        #seccion3 h2.cabello {
-          margin-top: 3.3em;
-          color: #005baa;
-          padding-left: .5em; } }
-  @media screen and (min-width: 1400px) {
-    #seccion3 {
-      background: linear-gradient(to right, #455871 57%, #fff 57%); } }
-
-.h2 {
-  width: 100%;
-  position: relative;
-  border-right: 30px solid transparent;
-  border-bottom: 65px solid #d32263;
-  margin-bottom: 2.5em;
-  overflow: hidden; }
-  .h2:after, .h2:before {
-    position: absolute;
-    content: ""; }
-  .h2:after {
-    border-right: 60px solid transparent;
-    border-left: 30px solid transparent;
-    border-top: 40px solid #911744;
-    width: 20px;
-    right: -30px;
-    bottom: -105px; }
-  .h2:before {
-    border-right: 50px solid transparent;
-    border-left: 50px solid transparent;
-    border-top: 65px solid #bd1e59;
-    width: 500px;
-    right: -420px;
-    bottom: -105px;
-    z-index: -1; }
-  .h2 h2 {
-    position: absolute;
-    color: #fdea08;
-    right: 1em;
-    top: -.2em; }
-  .h2 p {
-    position: absolute;
-    color: white;
-    bottom: -94px;
-    right: -360px;
-    font-size: .9em; }
+      color: #005baa;
+      padding-left: .5em; } }
 
 #seccion4 {
   min-height: 100vh;
   background: #fff;
   padding: 2em 0; }
+  #seccion4 cite {
+    margin-top: 1em;
+    margin-bottom: 1em;
+    display: block; }
+  #seccion4 figure img {
+    width: 100%; }
   #seccion4 h2 {
-    color: #2b4b96; }
+    width: 100%;
+    background: #be1f4e;
+    text-align: left;
+    padding-left: 1em;
+    line-height: 2;
+    color: #fff;
+    font-size: 2em;
+    font-weight: 300;
+    margin: 0; }
   #seccion4 p span {
-    color: #2b4b96;
+    color: #be1f4e;
     font-weight: 700; }
   #seccion4 h3 {
     color: white; }
     #seccion4 h3 span {
       color: #d8ff01; }
-  @media screen and (min-width: 1024px) {
-    #seccion4 {
-      height: 100vh; } }
   #seccion4 figcaption {
-    color: #2b4b96;
+    color: #be1f4e;
     font-weight: 700; }
 
 .flex-around li {
@@ -3082,30 +3163,47 @@ ul {
     .flex-around li span.icon-aceptar:before {
       top: 0; }
 
-#seccion6 {
-  padding: 2em 0;
-  background-color: #a0b0bd;
-  min-height: 100%;
-  color: white; }
-  #seccion6 .ptop {
-    padding-top: 3em; }
-  #seccion6 h2, #seccion6 h3, #seccion6 li {
-    color: #d8ff01; }
-  #seccion6 h3 {
-    font-style: italic; }
-  @media screen and (min-width: 1024px) {
-    #seccion6 {
-      background: url(../img/hombremegusta.png) no-repeat, #a0b0bd;
-      background-position: right bottom;
-      height: 100vh; } }
-  @media screen and (min-width: 1400px) {
-    #seccion6 {
-      background-size: contain; } }
+#seccion6 ul {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: space-around;
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0;
+  width: 100%; }
+  #seccion6 ul li {
+    font-size: 1em;
+    text-align: center;
+    font-weight: 300; }
+    #seccion6 ul li span {
+      width: 35px;
+      height: 35px; }
+  @media screen and (min-width: 768px) {
+    #seccion6 ul li {
+      font-size: 2em; } }
+
+#seccion6 .ed-container {
+  background: #c2c3c6; }
+
+#seccion6 h3 {
+  color: #30a4a5;
+  font-size: 1.8em;
+  text-align: center;
+  font-weight: 300; }
+  #seccion6 h3 span {
+    color: #be1f4e; }
+    #seccion6 h3 span.big {
+      font-size: 1.5em; }
 
 #seccion5 {
-  background: #2b4b96; }
+  background: #be1f4e; }
   #seccion5 h2 {
-    color: white; }
+    color: white;
+    font-weight: 300; }
   #seccion5 form {
     position: relative;
     top: 0;
@@ -3130,7 +3228,7 @@ ul {
 
 form {
   width: 100%;
-  background: linear-gradient(to bottom, #16c1f3 0%, #0066b3 100%);
+  background: #be1f4e;
   height: 462px;
   color: white;
   box-sizing: border-box;
@@ -3141,11 +3239,9 @@ form {
   @media screen and (min-width: 1024px) {
     form {
       position: absolute;
-      max-width: 300px;
-      top: calc(-100vh + 120px);
-      right: 0;
-      border-radius: 20px;
-      box-shadow: 2px 2px 50px rgba(255, 255, 255, 0.4), -2px -2px 50px rgba(255, 255, 255, 0.4); }
+      max-width: 350px;
+      top: -487px;
+      right: 45px; }
       form .input p {
         font-size: .9em; } }
   form input[type=number]::-webkit-inner-spin-button,
@@ -3154,11 +3250,12 @@ form {
     margin: 0; }
   form input[type=number] {
     -moz-appearance: textfield; }
-  form h3 {
+  form h4 {
     margin: 0;
     margin-bottom: .5em;
     margin-top: 1em;
-    color: white; }
+    color: white;
+    font-weight: 300; }
   form p {
     margin-bottom: 0; }
   form .input {
