--- a/scss/tema/_footer.scss
+++ b/scss/tema/_footer.scss
@@ -1,6 +1,6 @@
 
 #footer{
-	background: #000;
+	background: url(../img/flores.png),#be1f4e;
 	min-height: 120px;
 	color:rgba(255,255,255,.6);
 	@include desde(tablet){
