--- a/scss/tema/_formulario.scss
+++ b/scss/tema/_formulario.scss
@@ -1,7 +1,7 @@
 
 form{
 	width: 100%;
-	background: linear-gradient(to bottom, #16c1f3 0%,#0066b3 100%);
+	background: #be1f4e;
 	height:462px;
 	color:white;
 	box-sizing: border-box;
@@ -11,12 +11,9 @@ form{
 	padding: .6em 0;
 	@include desde(web){
 		position: absolute;
-		max-width: 300px;
-		top:calc(-100vh + 120px);
-		right: 0;
-		border-radius:20px;
-		box-shadow: 2px 2px 50px rgba(255,255,255,.4),
-					-2px -2px 50px rgba(255,255,255,.4);
+		max-width: 350px;
+		top:-487px;
+		right: 45px;
 		.input{
 			p{
 				font-size: .9em;
@@ -32,11 +29,12 @@ form{
 	  input[type=number] {
 	    -moz-appearance:textfield;
 	}
-	h3{
+	h4{
 		margin: 0;
 		margin-bottom: .5em;
 		margin-top: 1em;
 		color:white;
+		font-weight: $light;
 	}
 	p{
 		margin-bottom: 0;
